chore: a bunch of various cleanup